--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,14 @@
 buildscript {
 
-    ext.kotlin_version = '1.1.1'
+    ext.kotlin_version = '1.2.41'
 
     repositories {
         jcenter()
+        google()
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:3.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
 }
@@ -15,6 +16,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 }
 
