--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -2,14 +2,11 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
     buildToolsVersion '27.0.3'
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 27
-        versionCode 1
-        versionName "1.0"
     }
 
     sourceSets {
@@ -26,7 +23,7 @@ android {
 }
 
 dependencies {
-    api 'com.android.support:appcompat-v7:27.1.1'
+    api 'androidx.appcompat:appcompat:1.0.0-rc02'
     api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     api 'io.reactivex:rxjava:1.3.4'
 
